--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,12 @@
     <link rel="stylesheet" href="css/icomoon.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body
+    data-aos-easing="slide"
+    data-aos-duration="800"
+    data-aos-delay="0"
+    className=""
+  >
     <div id="root"></div>
 
     <script src="js/jquery.min.js"></script>
