--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Andrea - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Saurav Ghosal's Personal Blog</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
